--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
     "colon:names": "colon-names",
     "e2e": "cypress run",
     "e2e:chrome": "cypress run --browser chrome",
-    "e2e:record": "cypress run",
-    "e2e:record:chrome": "cypress run --browser chrome",
-    "e2e:record:edge": "cypress run --browser edge",
-    "e2e:record:firefox": "cypress run --browser firefox",
-    "e2e:record:parallel": "cypress run --parallel",
+    "e2e:record": "cypress run --record",
+    "e2e:record:chrome": "cypress run --record --browser chrome",
+    "e2e:record:edge": "cypress run --record --browser edge",
+    "e2e:record:firefox": "cypress run --record --browser firefox",
+    "e2e:record:parallel": "cypress run --record --parallel",
     "test:ci": "run-p --race start:ci e2e",
     "test:ci:windows": "run-p --race start:ci:windows e2e",
     "test:ci:chrome": "run-p --race start:ci e2e:chrome",
@@ -41,7 +41,7 @@
     "cy:version": "cypress version",
     "cy:cache:list": "cypress cache list",
     "cy:run": "cypress run",
-    "cy:run:record": "cypress run",
+    "cy:run:record": "cypress run --record",
     "cy:open": "cypress open",
     "local:open": "start-test 8080 cy:open",
     "local:run": "start-test 8080 cy:run",
